Add DEFINE_validator macro for convenient registration of a flag validator.
git-svn-id: https://gflags.googlecode.com/svn/trunk@82 6586e3c6-dcc4-952a-343f-ff74eb82781d

--- a/src/gflags/gflags.h.in
+++ b/src/gflags/gflags.h.in
@@ -135,6 +135,11 @@ extern bool RegisterFlagValidator(const std::string* flag,
                                   bool (*validate_fn)(const char*,
                                                       const std::string&));
 
+// Convenience macro for the registration of a flag validator
+#define DEFINE_validator(name, validator) \
+    static const bool name##_validator_registered = \
+            @ac_google_namespace@::RegisterFlagValidator(&FLAGS_##name, validator)
+
 
 // --------------------------------------------------------------------
 // These methods are the best way to get access to info about the
