--- a/include/gflags/gflags_completions.h.in
+++ b/include/gflags/gflags_completions.h.in
@@ -112,19 +112,10 @@ $ complete -o bashdefault -o default -o nospace -C                            \
 #ifndef GFLAGS_COMPLETIONS_H_
 #define GFLAGS_COMPLETIONS_H_
 
-// Annoying stuff for windows -- makes sure clients can import these functions
-//
-// NOTE: all functions below MUST have an explicit 'extern' before
-// them.  Our automated opensourcing tools use this as a signal to do
-// appropriate munging for windows, which needs to add GFLAGS_DLL_DECL.
-//
-#define GFLAGS_DLL_DECL  /* rewritten to be non-empty in windows dir */
-
-
-@ac_google_start_namespace@
+namespace @GFLAGS_NAMESPACE@ {
 
 extern void HandleCommandLineCompletions(void);
 
-@ac_google_end_namespace@
+}
 
 #endif  // GFLAGS_COMPLETIONS_H_
