--- a/include/gflags/gflags_declare.h.in
+++ b/include/gflags/gflags_declare.h.in
@@ -37,40 +37,64 @@
 #ifndef GFLAGS_DECLARE_H_
 #define GFLAGS_DECLARE_H_
 
+
+#if !defined(GFLAGS_DLL_DECL)
+#  if defined(_MSC_VER)
+#    if defined(GFLAGS_DLL_EXPORT)
+#      define GFLAGS_DLL_DECL __declspec(dllexport)
+#    else
+#      define GFLAGS_DLL_DECL __declspec(dllimport)
+#    endif
+#  else
+#    define GFLAGS_DLL_DECL
+#  endif
+#endif
+
+// We always want to import declared variables, dll or no
+#if !defined(GFLAGS_DLL_DECLARE_FLAG)
+#  if defined(_MSC_VER)
+#    define GFLAGS_DLL_DECLARE_FLAG __declspec(dllimport)
+#  else
+#    define GFLAGS_DLL_DECLARE_FLAG
+#  endif
+#endif
+
+
 #include <string>
-#if @ac_cv_have_stdint_h@
+#if @HAVE_STDINT_H@
 #include <stdint.h>         // the normal place uint16_t is defined
 #endif
-#if @ac_cv_have_systypes_h@
+#if @HAVE_SYS_TYPES_H@
 #include <sys/types.h>      // the normal place u_int16_t is defined
 #endif
-#if @ac_cv_have_inttypes_h@
+#if @HAVE_INTTYPES_H@
 #include <inttypes.h>       // a third place for uint16_t or u_int16_t
 #endif
 
-@ac_google_start_namespace@
-#if @ac_cv_have_uint16_t@      // the C99 format
-typedef int32_t int32;
+
+namespace @GFLAGS_NAMESPACE@ {
+
+#if @HAVE_uint16_t@         // the C99 format
+typedef int32_t  int32;
 typedef uint32_t uint32;
-typedef int64_t int64;
+typedef int64_t  int64;
 typedef uint64_t uint64;
-#elif @ac_cv_have_u_int16_t@   // the BSD format
-typedef int32_t int32;
+#elif @HAVE_u_int16_t@      // the BSD format
+typedef int32_t   int32;
 typedef u_int32_t uint32;
-typedef int64_t int64;
+typedef int64_t   int64;
 typedef u_int64_t uint64;
-#elif @ac_cv_have___int16@     // the windows (vc7) format
-typedef __int32 int32;
+#elif @HAVE___int16@        // the windows (vc7) format
+typedef __int32          int32;
 typedef unsigned __int32 uint32;
-typedef __int64 int64;
+typedef __int64          int64;
 typedef unsigned __int64 uint64;
 #else
-#error Do not know how to define a 32-bit integer quantity on your system
+#  error Do not know how to define a 32-bit integer quantity on your system
 #endif
-@ac_google_end_namespace@
 
+} // namespace @GFLAGS_NAMESPACE@
 
-#define GFLAGS_DLL_DECLARE_FLAG  /* rewritten to be non-empty in windows dir */
 
 namespace fLS {
 
@@ -80,7 +104,8 @@ namespace fLS {
 // included).  Save the current meaning now and use it in the macros.
 typedef std::string clstring;
 
-}
+} // namespace fLS
+
 
 #define DECLARE_VARIABLE(type, shorttype, name) \
   /* We always want to import declared variables, dll or no */ \
@@ -103,10 +128,12 @@ typedef std::string clstring;
   DECLARE_VARIABLE(double, D, name)
 
 #define DECLARE_string(name) \
-  namespace fLS {                       \
-  using ::fLS::clstring;                \
+  /* We always want to import declared variables, dll or no */ \
+  namespace fLS { \
+  using ::fLS::clstring; \
   extern GFLAGS_DLL_DECLARE_FLAG ::fLS::clstring& FLAGS_##name; \
-  }                                     \
+  } \
   using fLS::FLAGS_##name
+
 
 #endif  // GFLAGS_DECLARE_H_
