--- a/src/config.h.in
+++ b/src/config.h.in
@@ -1,106 +1,80 @@
-/* src/config.h.in.  Generated from configure.ac by autoheader.  */
+/* Generated from config.h.in during configuration using CMake. */
 
-/* Always the empty-string on non-windows systems. On windows, should be
-   "__declspec(dllexport)". This way, when we compile the dll, we export our
-   functions/classes. It's safe to define this here because config.h is only
-   used internally, to compile the DLL, and every DLL source file #includes
-   "config.h" before anything else. */
-#undef GFLAGS_DLL_DECL
+// ---------------------------------------------------------------------------
+// Meta-information
 
-/* Namespace for Google classes */
-#undef GOOGLE_NAMESPACE
+// Name of package.
+#define PACKAGE @PROJECT_NAME@
 
-/* Define to 1 if you have the <dlfcn.h> header file. */
-#undef HAVE_DLFCN_H
+// Define to the full name of this package.
+#define PACKAGE_NAME @PACKAGE_NAME@
 
-/* Define to 1 if you have the <fnmatch.h> header file. */
-#undef HAVE_FNMATCH_H
+// Define to the full name and version of this package.
+#define PACKAGE_STRING @PACKAGE_STRING@
 
-/* Define to 1 if you have the <inttypes.h> header file. */
-#undef HAVE_INTTYPES_H
+// Define to the one symbol short name of this package.
+#define PACKAGE_TARNAME @PACKAGE_TARNAME@
 
-/* Define to 1 if you have the <memory.h> header file. */
-#undef HAVE_MEMORY_H
+// Define to the version of this package.
+#define PACKAGE_VERSION @PACKAGE_VERSION@
 
-/* define if the compiler implements namespaces */
-#undef HAVE_NAMESPACES
+// Version number of package.
+#define VERSION PACKAGE_VERSION
 
-/* Define if you have POSIX threads libraries and header files. */
-#undef HAVE_PTHREAD
+// Define to the address where bug reports for this package should be sent.
+#define PACKAGE_BUGREPORT @PACKAGE_BUGREPORT@
 
-/* Define to 1 if you have the <stdint.h> header file. */
-#undef HAVE_STDINT_H
+// ---------------------------------------------------------------------------
+// Namespace for gflags symbols.
+#define GFLAGS_NAMESPACE @GFLAGS_NAMESPACE@
 
-/* Define to 1 if you have the <stdlib.h> header file. */
-#undef HAVE_STDLIB_H
+// ---------------------------------------------------------------------------
+// Available system headers
 
-/* Define to 1 if you have the <strings.h> header file. */
-#undef HAVE_STRINGS_H
+// Whether sources are compiled on a Windows system
+#define WINDOWS (defined(_WIN32) || defined(WIN32) || defined(_WINDOWS))
 
-/* Define to 1 if you have the <string.h> header file. */
-#undef HAVE_STRING_H
+// Define to 1 if you have the <fnmatch.h> header file.
+#define HAVE_FNMATCH_H @HAVE_FNMATCH_H@
 
-/* Define to 1 if you have the `strtoll' function. */
-#undef HAVE_STRTOLL
+// Define to 1 if you have the <inttypes.h> header file.
+#define HAVE_INTTYPES_H @HAVE_INTTYPES_H@
 
-/* Define to 1 if you have the `strtoq' function. */
-#undef HAVE_STRTOQ
+// Define to 1 if you have the <unistd.h> header file.
+#define HAVE_UNISTD_H @HAVE_UNISTD_H@
 
-/* Define to 1 if you have the <sys/stat.h> header file. */
-#undef HAVE_SYS_STAT_H
+// Define to 1 if you have the <sys/stat.h> header file.
+#define HAVE_SYS_STAT_H @HAVE_SYS_STAT_H@
 
-/* Define to 1 if you have the <sys/types.h> header file. */
-#undef HAVE_SYS_TYPES_H
+// Define to 1 if you have the strtoll function.
+#define HAVE_STRTOLL @HAVE_STRTOLL@
 
-/* Define to 1 if you have the <unistd.h> header file. */
-#undef HAVE_UNISTD_H
+// Define to 1 if you have the strtoq function.
+#define HAVE_STRTOQ @HAVE_STRTOQ@
 
-/* define if your compiler has __attribute__ */
-#undef HAVE___ATTRIBUTE__
+// Define to 1 if you have the <pthread.h> header file.
+#define HAVE_PTHREAD @HAVE_PTHREAD@
 
-/* Define to the sub-directory in which libtool stores uninstalled libraries.
-   */
-#undef LT_OBJDIR
-
-/* Name of package */
-#undef PACKAGE
-
-/* Define to the address where bug reports for this package should be sent. */
-#undef PACKAGE_BUGREPORT
-
-/* Define to the full name of this package. */
-#undef PACKAGE_NAME
-
-/* Define to the full name and version of this package. */
-#undef PACKAGE_STRING
-
-/* Define to the one symbol short name of this package. */
-#undef PACKAGE_TARNAME
-
-/* Define to the version of this package. */
-#undef PACKAGE_VERSION
-
-/* Define to necessary symbol if this constant uses a non-standard name on
-   your system. */
-#undef PTHREAD_CREATE_JOINABLE
-
-/* Define to 1 if you have the ANSI C header files. */
-#undef STDC_HEADERS
-
-/* the namespace where STL code like vector<> is defined */
-#undef STL_NAMESPACE
-
-/* Version number of package */
-#undef VERSION
-
-/* Stops putting the code inside the Google namespace */
-#undef _END_GOOGLE_NAMESPACE_
-
-/* Puts following code inside the Google namespace */
-#undef _START_GOOGLE_NAMESPACE_
-
-
-#if defined( __MINGW32__) || defined(__MINGW64__)
-#include "windows/port.h"
+// ---------------------------------------------------------------------------
+// Path separator
+#ifndef PATH_SEPARATOR
+#  define PATH_SEPARATOR  '/'
 #endif
 
+// ---------------------------------------------------------------------------
+// Windows-specific definitions
+#if !defined(GFLAGS_DLL_DECL)
+#  if defined(_MSC_VER)
+#    if defined(GFLAGS_DLL_EXPORT)
+#      define GFLAGS_DLL_DECL __declspec(dllexport)
+#    else
+#      define GFLAGS_DLL_DECL __declspec(dllimport)
+#    endif
+#  else
+#    define GFLAGS_DLL_DECL
+#  endif
+#endif
+
+#if defined( __MINGW32__) || defined(__MINGW64__)
+#  include "windows/port.h"
+#endif
