--- a/src/config.h.in
+++ b/src/config.h.in
@@ -55,6 +55,11 @@
 // Define to 1 if you have the <pthread.h> header file.
 #define HAVE_PTHREAD @HAVE_PTHREAD@
 
+// gcc requires this to get PRId64, etc.
+#if HAVE_INTTYPES_H && !defined(__STDC_FORMAT_MACROS)
+#  define __STDC_FORMAT_MACROS 1
+#endif
+
 // ---------------------------------------------------------------------------
 // Path separator
 #ifndef PATH_SEPARATOR
