Set PACKAGE_VERSION_EXACT to FALSE if major.minor version is not equal to the requested version.

--- a/cmake/version.cmake.in
+++ b/cmake/version.cmake.in
@@ -13,8 +13,9 @@ set (PACKAGE_VERSION "@PACKAGE_VERSION@")
 set (PACKAGE_VERSION_COMPATIBLE TRUE)
 set (PACKAGE_VERSION_UNSUITABLE FALSE)
 
-if ("${PACKAGE_FIND_VERSION_MAJOR}" EQUAL "@PACKAGE_VERSION_MAJOR@")
-  if ("${PACKAGE_FIND_VERSION_MINOR}" EQUAL "@PACKAGE_VERSION_MINOR@")
-    set (PACKAGE_VERSION_EXACT TRUE)
-  endif ()
+if ("${PACKAGE_FIND_VERSION_MAJOR}" EQUAL "@PACKAGE_VERSION_MAJOR@" AND
+    "${PACKAGE_FIND_VERSION_MINOR}" EQUAL "@PACKAGE_VERSION_MINOR@")
+  set (PACKAGE_VERSION_EXACT TRUE)
+else ()
+  set (PACKAGE_VERSION_EXACT FALSE)
 endif ()
