--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,11 @@ DartConfiguration.tcl
 Makefile
 *.cmake
 CMakeFiles/
-Testing/
-include/
-lib/
-test/
+/Testing/
+/include/gflags/config.h
+/include/gflags/gflags_completions.h
+/include/gflags/gflags_declare.h
+/include/gflags/gflags.h
+/lib/
+/test/gflags_unittest_main.cc
+/test/gflags_unittest-main.cc
