--- a/src/gflags.h.in
+++ b/src/gflags.h.in
@@ -78,36 +78,14 @@
 #ifndef GFLAGS_GFLAGS_H_
 #define GFLAGS_GFLAGS_H_
 
-
-#if !defined(GFLAGS_DLL_DECL)
-#  if defined(_MSC_VER)
-#    if defined(GFLAGS_DLL_EXPORT)
-#      define GFLAGS_DLL_DECL __declspec(dllexport)
-#    else
-#      define GFLAGS_DLL_DECL __declspec(dllimport)
-#    endif
-#  else
-#    define GFLAGS_DLL_DECL
-#  endif
-#endif
-
-// We always want to export defined variables, dll or no
-#if !defined(GFLAGS_DLL_DEFINE_FLAG)
-#  if defined(_MSC_VER)
-#    define GFLAGS_DLL_DEFINE_FLAG __declspec(dllimport)
-#  else
-#    define GFLAGS_DLL_DEFINE_FLAG
-#  endif
-#endif
-
-
 #include <string>
 #include <vector>
 
-#include <@GFLAGS_NAMESPACE@/gflags_declare.h> // IWYU pragma: export
+#include "gflags_config.h"
+#include "gflags_declare.h" // IWYU pragma: export
 
 
-namespace @GFLAGS_NAMESPACE@ {
+namespace GFLAGS_NAMESPACE {
 
 
 // --------------------------------------------------------------------
@@ -156,7 +134,7 @@ extern bool RegisterFlagValidator(const std::string* flag,
 // Convenience macro for the registration of a flag validator
 #define DEFINE_validator(name, validator) \
     static const bool name##_validator_registered = \
-            @GFLAGS_NAMESPACE@::RegisterFlagValidator(&FLAGS_##name, validator)
+            GFLAGS_NAMESPACE::RegisterFlagValidator(&FLAGS_##name, validator)
 
 
 // --------------------------------------------------------------------
@@ -306,7 +284,7 @@ class GFLAGS_DLL_DECL FlagSaver {
   FlagSaver(const FlagSaver&);  // no copying!
   void operator=(const FlagSaver&);
 }
-@__ATTRIBUTE__UNUSED@;
+GFLAGS__ATTRIBUTE__UNUSED;
 
 // --------------------------------------------------------------------
 // Some deprecated or hopefully-soon-to-be-deprecated functions.
@@ -464,7 +442,7 @@ class GFLAGS_DLL_DECL FlagRegisterer {
 extern const char kStrippedFlagHelp[];
 
 
-} // namespace @GFLAGS_NAMESPACE@
+} // namespace GFLAGS_NAMESPACE
 
 
 #ifndef SWIG  // In swig, ignore the main flag declarations
@@ -472,7 +450,7 @@ extern const char kStrippedFlagHelp[];
 #if defined(STRIP_FLAG_HELP) && STRIP_FLAG_HELP > 0
 // Need this construct to avoid the 'defined but not used' warning.
 #define MAYBE_STRIPPED_HELP(txt) \
-   (false ? (txt) : @GFLAGS_NAMESPACE@::kStrippedFlagHelp)
+   (false ? (txt) : GFLAGS_NAMESPACE::kStrippedFlagHelp)
 #else
 #define MAYBE_STRIPPED_HELP(txt) txt
 #endif
@@ -494,7 +472,7 @@ extern const char kStrippedFlagHelp[];
     /* We always want to export defined variables, dll or no */         \
     GFLAGS_DLL_DEFINE_FLAG type FLAGS_##name = FLAGS_nono##name;        \
     type FLAGS_no##name = FLAGS_nono##name;                             \
-    static @GFLAGS_NAMESPACE@::FlagRegisterer o_##name( \
+    static GFLAGS_NAMESPACE::FlagRegisterer o_##name( \
       #name, #type, MAYBE_STRIPPED_HELP(help), __FILE__,                \
       &FLAGS_##name, &FLAGS_no##name);                                  \
   }                                                                     \
@@ -527,15 +505,15 @@ GFLAGS_DLL_DECL bool IsBoolFlag(bool from);
   DEFINE_VARIABLE(bool, B, name, val, txt)
 
 #define DEFINE_int32(name, val, txt) \
-   DEFINE_VARIABLE(@GFLAGS_NAMESPACE@::int32, I, \
+   DEFINE_VARIABLE(GFLAGS_NAMESPACE::int32, I, \
                    name, val, txt)
 
 #define DEFINE_int64(name, val, txt) \
-   DEFINE_VARIABLE(@GFLAGS_NAMESPACE@::int64, I64, \
+   DEFINE_VARIABLE(GFLAGS_NAMESPACE::int64, I64, \
                    name, val, txt)
 
 #define DEFINE_uint64(name,val, txt) \
-   DEFINE_VARIABLE(@GFLAGS_NAMESPACE@::uint64, U64, \
+   DEFINE_VARIABLE(GFLAGS_NAMESPACE::uint64, U64, \
                    name, val, txt)
 
 #define DEFINE_double(name, val, txt) \
@@ -576,7 +554,7 @@ inline clstring* dont_pass0toDEFINE_string(char *stringspot,
     clstring* const FLAGS_no##name = ::fLS::                                \
                                    dont_pass0toDEFINE_string(s_##name[0].s, \
                                                              val);          \
-    static @GFLAGS_NAMESPACE@::FlagRegisterer o_##name(                     \
+    static GFLAGS_NAMESPACE::FlagRegisterer o_##name(                     \
         #name, "string", MAYBE_STRIPPED_HELP(txt), __FILE__,                \
         s_##name[0].s, new (s_##name[1].s) clstring(*FLAGS_no##name));      \
     extern GFLAGS_DLL_DEFINE_FLAG clstring& FLAGS_##name;                   \
